--- a/QUAC_SYS/client/package.json
+++ b/QUAC_SYS/client/package.json
@@ -1,26 +1,14 @@
 {
-  "name": "final-project",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "http-errors": "^1.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "minimist": "^1.2.5",
-    "morgan": "^1.10.0",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
