--- a/QUAC_SYS/server/package.json
+++ b/QUAC_SYS/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.5",
     "morgan": "^1.10.0",
+    "ms": "^3.0.0-canary.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
