--- a/QUAC_SYS/client/package.json
+++ b/QUAC_SYS/client/package.json
@@ -15,7 +15,10 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-loading": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
