--- a/QUAC_SYS/server/package.json
+++ b/QUAC_SYS/server/package.json
@@ -21,6 +21,7 @@
     "ms": "^3.0.0-canary.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "query-types": "^0.1.4",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
     "swagger-ui-express": "^4.1.6"
