--- a/QUAC_SYS/server/package.json
+++ b/QUAC_SYS/server/package.json
@@ -24,6 +24,7 @@
     "query-types": "^0.1.4",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.2.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
