--- a/QUAC_SYS/client/package.json
+++ b/QUAC_SYS/client/package.json
@@ -18,7 +18,8 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "socket.io": "^4.2.0",
+    "sendmail": "^1.6.1",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
