--- a/QUAC_SYS/server/api/package.json
+++ b/QUAC_SYS/server/api/package.json
@@ -19,6 +19,8 @@
     "minimist": "^1.2.5",
     "morgan": "^1.10.0",
     "ms": "^3.0.0-canary.1",
+    "node-cron": "^3.0.0",
+    "node-schedule": "^2.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "query-types": "^0.1.4",
